--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Caputa Lukasz Website">
     <meta name="author" content="Lukasz Caputa">
+    <script src="https://kit.fontawesome.com/699813b3ab.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Mgr inz. Lukasz Caputa</title>
+    <title>Lukasz Caputa - Software Engineer</title>
 </head>
 <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-5">Lukasz</h1>
-            <p class="lead">lorem ipsum</p>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <img src="img/caputa.png" class="img-fluid" alt="Profile picture">
+                </div>
+                <div class="col">
+                    <h1>
+                        Lukasz Caputa <small class="text-muted">mgr inz.</small>
+                    </h1>
+                    <p class="lead">
+                        Software Engineer
+                    </p>
+                    <p>I'm an IT professional with vast experience in international projects. Buzz words like Frontend, Backend, DevOps or Scrum are no mystery to me. I fluently speak English and German; Polish being my native language. Don't hesitate to reach out to me regarding new opportunities ! I provide following services:</p>                    <ul class="list-unstyled">
+                        <li>Software development - think Java, PL/SQL, JavaScript, Python ...</li>
+                        <li>Agile project management - SCRUM</li>
+                        <li>Infrastructure - Cloud (AWS), Linux</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-2">
+                <div class="col text-right"><i class="fas fa-at"></i></div>
+                <div class="col">lukasz [at] lukaszcaputa.eu</div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col text-right"><i class="fas fa-phone"></i></div>
+                <div class="col">+48 530 77 44 99</div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col text-right"><i class="fas fa-phone"></i></div>
+                <div class="col">+43 6767 039 505</div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col text-right"><i class="fas fa-map-marker-alt"></i></div>
+                <div class="col">Warsaw, PL, EU</div>
+            </div>
+            <div class="row justify-content-center mt-5">
+                <div class="col text-right">
+                    <a href="https://github.com/LukaszCaputa" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+                <div class="col">
+                    <a href="http://www.linkedin.com/in/lukasz-caputa" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+
         </div>
     </main>
 
     <footer class="footer">
-        <div class="container">
-
-            &copy; Lukasz Caputa 2020.
+        <div class="">
+            &copy; Lukasz Caputa 2020
         </div>
-
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
