added favicon and animations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Lukasz Caputa - Software Engineer</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
 </head>
 <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
@@ -17,7 +18,7 @@
                 <div class="col">
                     <img src="img/caputa.png" class="img-fluid" alt="Profile picture">
                 </div>
-                <div class="col">
+                <div class="col" id="data1">
                     <h1>
                         Lukasz Caputa <small class="text-muted">mgr inz.</small>
                     </h1>
@@ -25,39 +26,42 @@
                         Software Engineer
                     </p>
                     <p>I'm an IT professional with vast experience in international projects. Buzz words like Frontend, Backend, DevOps or Scrum are no mystery to me. I fluently speak English and German; Polish being my native language. Don't hesitate to reach out to me regarding new opportunities ! I provide following services:</p>                    <ul class="list-unstyled">
-                        <li>Software development - think Java, PL/SQL, JavaScript, Python ...</li>
-                        <li>Agile project management - SCRUM</li>
-                        <li>Infrastructure - Cloud (AWS), Linux</li>
+                        <li><b>Software development</b> - think Java, PL/SQL, JavaScript, Python ...</li>
+                        <li><b>Agile project management</b> - SCRUM</li>
+                        <li><b>Infrastructure</b> - Cloud (AWS), Linux</li>
                     </ul>
                 </div>
             </div>
-            <div class="row justify-content-center mt-2">
-                <div class="col text-right"><i class="fas fa-at"></i></div>
-                <div class="col">lukasz [at] lukaszcaputa.eu</div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col text-right"><i class="fas fa-phone"></i></div>
-                <div class="col">+48 530 77 44 99</div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col text-right"><i class="fas fa-phone"></i></div>
-                <div class="col">+43 6767 039 505</div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col text-right"><i class="fas fa-map-marker-alt"></i></div>
-                <div class="col">Warsaw, PL, EU</div>
-            </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col text-right">
-                    <a href="https://github.com/LukaszCaputa" target="_blank"><i class="fab fa-github"></i></a>
+            <div id="data2" class="mt-4">
+                <div class="row justify-content-center">
+                    <div class="col text-right"><i class="fas fa-at"></i></div>
+                    <div class="col">lukasz [at] lukaszcaputa.eu</div>
                 </div>
-                <div class="col">
-                    <a href="http://www.linkedin.com/in/lukasz-caputa" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <div class="row justify-content-center">
+                    <div class="col text-right"><i class="fas fa-phone"></i></div>
+                    <div class="col">+48 530 77 44 99</div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col text-right"><i class="fas fa-phone"></i></div>
+                    <div class="col">+43 6767 039 505</div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col text-right"><i class="fas fa-map-marker-alt"></i></div>
+                    <div class="col">Warsaw, PL, EU</div>
                 </div>
             </div>
-
+            <div id="data3" class="mt-4">
+                <div class="row justify-content-center">
+                    <div class="col text-right">
+                        <a href="https://github.com/LukaszCaputa" target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
+                    <div class="col">
+                        <a href="http://www.linkedin.com/in/lukasz-caputa" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </main>
+</main>
 
     <footer class="footer">
         <div class="">
