--- a/index.html
+++ b/index.html
@@ -2,77 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Caputa Lukasz Website">
     <meta name="author" content="Lukasz Caputa">
     <script src="https://kit.fontawesome.com/699813b3ab.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    
     <title>Lukasz Caputa - Software Engineer</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+
 </head>
-<body class="d-flex flex-column h-100">
-    <main role="main" class="flex-shrink-0">
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col">
-                    <img src="img/caputa.png" class="img-fluid" alt="Profile picture">
-                </div>
-                <div class="col" id="data1">
-                    <h1>
-                        Lukasz Caputa <small class="text-muted">mgr inz.</small>
-                    </h1>
-                    <p class="lead">
-                        Software Engineer
-                    </p>
-                    <p>I'm an IT professional with vast experience in international projects. Buzz words like Frontend, Backend, DevOps or Scrum are no mystery to me. I fluently speak English and German; Polish being my native language. Don't hesitate to reach out to me regarding new opportunities ! I provide following services:</p>                    <ul class="list-unstyled">
-                        <li><b>Software development</b> - think Java, PL/SQL, JavaScript, Python ...</li>
-                        <li><b>Agile project management</b> - SCRUM</li>
-                        <li><b>Infrastructure</b> - Cloud (AWS), Linux</li>
-                    </ul>
-                </div>
+<body class="m-5">
+    <main role="main" class="container">
+        <div class="row d-flex justify-content-center fadein aduration-1">
+            <div class="col-md-5">
+                <img src="img/caputa_lukasz.jpg" class="img-fluid" alt="Profile picture">
             </div>
-            <div id="data2" class="mt-4">
-                <div class="row justify-content-center">
-                    <div class="col text-right"><i class="fas fa-at"></i></div>
-                    <div class="col">lukasz [at] lukaszcaputa.eu</div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col text-right"><i class="fas fa-phone"></i></div>
-                    <div class="col">+48 530 77 44 99</div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col text-right"><i class="fas fa-phone"></i></div>
-                    <div class="col">+43 6767 039 505</div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col text-right"><i class="fas fa-map-marker-alt"></i></div>
-                    <div class="col">Warsaw, PL, EU</div>
-                </div>
-            </div>
-            <div id="data3" class="mt-4">
-                <div class="row justify-content-center">
-                    <div class="col text-right">
-                        <a href="https://github.com/LukaszCaputa" target="_blank"><i class="fab fa-github"></i></a>
-                    </div>
-                    <div class="col">
-                        <a href="http://www.linkedin.com/in/lukasz-caputa" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
+            <div class="col-md-7">
+                <h1>
+                    Lukasz Caputa <small class="text-muted">mgr inz.</small>
+                </h1>
+                <p class="lead">
+                    Software Engineer
+                </p>
+                <p>A forward-thinking software engineer with <b>over 10 years</b> of commercial experience in solving 
+                    real problems by developing software-based solutions. Passionate about innovation and technology, 
+                    with a proven ability to work well under pressure and meet tight deadlines. Highly motivated, with 
+                    a strong work ethic and desire for delivering quality software products. Skilled in a wide range of 
+                    software engineering and development roles, including architecture and design, implementation, 
+                    testing and QA. Fluent in <b>English</b> and <b>German</b>, with strong verbal and written communication skills. 
+                    Proficient in <b>Java</b>, <b>SQL</b> and <b>Node.js</b>, with a good understanding of software design patterns and 
+                    frameworks.</p>
             </div>
         </div>
-</main>
+
+        <div class="row text-center fadein aduration-1 adelay-05 pt-4">
+            <div class="col">
+                <i class="fas fa-at"></i>
+                lukasz [at] lukaszcaputa.eu
+            </div>
+        </div>
+
+        <div class="row text-center fadein aduration-1 adelay-06">
+            <div class="col">
+                <i class="fas fa-phone"></i>
+                +48 530 77 44 99
+            </div>
+        </div>
+
+        <div class="row text-center fadein aduration-1 adelay-07">
+            <div class="col">
+                <i class="fas fa-map-marker-alt"></i>
+                Warsaw 🇵🇱 🇪🇺
+            </div>
+        </div>
+
+        <div class="row text-center fadein aduration-1 adelay-09 pt-4">
+            <div class="col-sm">
+                <a href="https://github.com/LukaszCaputa" target="_blank" ><i class="fab fa-github"></i></a>
+            </div>
+            <div class="col-sm">
+                <a href="http://www.linkedin.com/in/lukasz-caputa" target="_blank" ><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+
+    </main>
 
     <footer class="footer">
-        <div class="">
-            &copy; Lukasz Caputa 2020
-        </div>
+        &copy; Lukasz Caputa 2023
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
 
